# Demon-Synth-Repository

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  setup.sh
.github/workflows/: build.yml
HellcatUI_Final/: README.md
HellcatUI_Final/UI/: HellcatLookAndFeel.h
HellcatUI_Final/UI/Components/: HellcatEnvelopeDisplay.h  HellcatGauge.h  HellcatMacroKnob.h  HellcatModMatrix.h  HellcatTopBar.h  HellcatTransportButton.h  HellcatXYPad.h
Installer/: LICENSE.txt
Installer/Windows/: DemonSynth.iss  build_installer.bat
Installer/macOS/: DemonSynthInstaller.applescript  DemonSynthUninstaller.applescript  create_dmg.sh  create_installer_app.sh  install.sh
Resources/Samples/Strings/Chamber Str/Wallpaper/: splash.tga
Source/Core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/Effects/: FXRack.h
Source/DSP/Filters/: LadderFilter.h  SVFFilter.h
Source/DSP/Modulators/: ADSR.h  LFO.h
Source/DSP/Oscillators/: Oscillator.cpp  Oscillator.h  WavetableOscillator.h
Source/Engine/PCM/: SamplePlayer.h  SamplePresetManager.h  SampleSynth.h  SampleZone.h  TimeStretch.h
Source/Engine/Voice/: SynthVoice.h  VoiceManager.h
Source/HellcatUI/: HellcatLookAndFeel.h
Source/HellcatUI/Components/: HellcatEnvelopeDisplay.h  HellcatFXPanel.h  HellcatFilterPanel.h  HellcatLFOPanel.h  HellcatMacroKnob.h  HellcatModMatrix.h  HellcatOscillatorPanel.h  HellcatOscilloscope.h  HellcatPresetBrowser.h  HellcatTabbedPanel.h  HellcatTopBar.h  HellcatTransportButton.h  HellcatXYPad.h
Source/Modulation/: MidiLearn.h  ModDestination.cpp  ModMatrix.h
Tests/: hellcat-vst-premium.html
